src/main/java/kela/plugins/dsl/lang/DSL.bnf
{
    parserClass="kela.plugins.dsl.lang.parser.DSLParser"
    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="DSL"
    psiImplClassSuffix="Impl"
    psiPackage="kela.plugins.dsl.lang.psi"
    psiImplPackage="kela.plugins.dsl.lang.psi.impl"
    psiImplUtilClass="kela.plugins.dsl.lang.DSLPsiImplUtil"

    elementTypeHolderClass="kela.plugins.dsl.psi.DSLTypes"
    elementTypeClass="kela.plugins.dsl.psi.DSLElementType"
    tokenTypeClass="kela.plugins.dsl.psi.DSLTokenType"

    tokens = [
        SLASH="//"
        HASH="#"
        DEBUG="#/"
        WHEN="[when]"
        THEN="[then]"
        KEYWORD="[keyword]"
        EQ="="
    ]
}

dslFile ::= ENTRY*
ENTRY ::= COMMENT |
          DEBUG_COMMENT |
          CRLF |
          WHEN_EXPRESSION |
          THEN_EXPRESSION |
          KEYWORD_EXPRESSION
COMMENT ::= ("//"|"#") STRING_TOKEN* CRLF
DEBUG_COMMENT ::= ("#/") STRING_TOKEN* CRLF
WHEN_EXPRESSION ::= "[when]" (STRING_TOKEN | LHS_VARIABLE)+ "=" (JAVA_CODE | RHS_VARIABLE)+
{
    methods=[getLhsVariable]
}
THEN_EXPRESSION ::= "[then]" (STRING_TOKEN | LHS_VARIABLE)+ "=" (JAVA_CODE | RHS_VARIABLE)+
{
    methods=[getLhsVariable]
}
LHS_VARIABLE ::= VARIABLE
RHS_VARIABLE ::= VARIABLE
JAVA_CODE ::= JAVA
KEYWORD_EXPRESSION ::= "[keyword]" (STRING_TOKEN)+ "=" (STRING_TOKEN)+
